Updated scripts to generate a random number of straight and curved lines, constrain the size of the canvas and ensure the canvas is centrally aligned

--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@ html {
   height: 100%;
   width: 100%;
 }
+
+      #myCanvas {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
